--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
     },
     "require": {
         "laravel/framework": "~4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.3.1"
     }
 }
