--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,11 @@
         }
     },
     "require": {
-        "laravel/framework": "~4"
+        "laravel/framework": "~4",
+        "league/flysystem": "0.5.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.1"
+        "phpunit/phpunit": "4.3.1",
+        "mockery/mockery": "0.9.2"
     }
 }
