--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
         }
     },
     "require": {
-        "laravel/framework": "~4",
-        "league/flysystem": "0.5.7"
+        "league/flysystem": "0.5.7",
+        "nikic/php-parser": "~1.0",
+        "illuminate/support": "~4"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.1",
